--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
-<?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-pushiomanager" version="6.48.0"
-    xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="UTF-8"?>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" 
+	xmlns:android="http://schemas.android.com/apk/res/android" 
+	id="cordova-plugin-pushiomanager" version="6.52.1">
     <name>PushIOManagerCordova</name>
     <js-module name="PushIOManager" src="www/PushIOManager.js">
         <clobbers target="PushIOManager" />
@@ -10,19 +10,17 @@
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="PushIOManagerPlugin">
                 <param name="android-package" value="com.pushio.manager.cordova.PushIOManagerPlugin" />
-                <param name="onload" value="true"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
-
-        <framework src="src/android/pushio.gradle" custom="true" type="gradleReference" />
-        <source-file src="src/android/PushIOManagerPlugin.java" target-dir="src/com/pushio/manager/cordova/"/>
-        <source-file src="src/android/PushIOManagerPluginUtils.java" target-dir="src/com/pushio/manager/cordova/"/>
+       <framework src="src/android/pushio.gradle" custom="true" type="gradleReference" />
+        <source-file src="src/android/PushIOManagerPlugin.java" target-dir="src/com/pushio/manager/cordova/" />
+        <source-file src="src/android/PushIOManagerPluginUtils.java" target-dir="src/com/pushio/manager/cordova/" />
     </platform>
-
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
             <feature name="PushIOManagerPlugin">
-                <param name="ios-package" value="PushIOManagerPlugin" />
+                <param name="ios-package" value="PushIOManagerPlugin" onload="true" />
             </feature>
         </config-file>
         <source-file src="src/ios/PushIOManagerPlugin.m" />
