--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-pushiomanager",
-  "version": "6.48.0",
+  "version": "6.53.0",
   "description": "Cordova Plugin for Responsys SDK",
   "cordova": {
     "id": "cordova-plugin-pushiomanager",
@@ -14,7 +14,8 @@
     "cordova-android",
     "cordova-ios"
   ],
-  "engines": [{
+  "engines": [
+    {
       "name": "cordova",
       "version": ">=9.0.1"
     },
